add image to employees
